# Strype

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  premake5.lua
.github/workflows/: cmake-multi-platform.yml
ExampleProject/: Example.sroom  ExampleProject.sproj  TestEntity.cs  TestObject.cs  test.sprefab
Libraries/: GLFW_premake5.lua  box2d_premake5.lua  imgui_premake5.lua  yaml-cpp_premake5.lua
Libraries/lib/: freetype.lib
Sandbox/: imgui.ini
Sandbox/assets/shaders/: BaseShader.glsl
Sandbox/src/: SandboxApp.cpp  main.cpp
Strype/: CMakeLists.txt  premake5.lua
Strype-Editor/: CMakeLists.txt  imgui.ini  premake5.lua
Strype-Editor/EmptyProject/: EmptyProject.sproj  premake5.lua
Strype-Editor/assets/: BaseShader.glsl  ScriptTemplate.cs  imgui.ini  premake5.lua
Strype-Editor/assets/EmptyProject/: EmptyProject.sproj  Room1.sroom
Strype-Editor/assets/defaults/: Build.bat  premake5.lua
Strype-Editor/assets/scenes/: Example.sroom
Strype-Editor/assets/shaders/: BaseShader.glsl
Strype-Editor/src/: EditorApp.cpp  EditorCamera.cpp  EditorCamera.h  EditorLayer.cpp  EditorLayer.h  EditorLayer.hpp  EditorPanel.hpp  EditorSession.cpp  EditorSession.hpp  FileWatch.hpp  LauncherSession.cpp  LauncherSession.hpp
Strype-Editor/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  ContentBrowserPanel.hpp  EditorPanel.h  EditorPanel.hpp  InspectorPanel.cpp  InspectorPanel.h  InspectorPanel.hpp  Panel.h  PanelManager.cpp  PanelManager.h  PanelManager.hpp  ProjectSettingsPanel.cpp  ProjectSettingsPanel.hpp  RoomPanel.cpp  RoomPanel.hpp  RuntimePanel.cpp  RuntimePanel.h  RuntimePanel.hpp  SceneHierachyPanel.cpp  SceneHierachyPanel.h  SceneHierachyPanel.hpp  ViewportPanel.cpp  ViewportPanel.h
Strype-Runtime/: CMakeLists.txt  premake5.lua
Strype-Runtime/src/: RuntimeApp.cpp  RuntimeLayer.cpp  RuntimeLayer.h  RuntimeLayer.hpp  RuntimeSession.cpp  RuntimeSession.hpp
Strype-ScriptCore/: CMakeLists.txt  premake5-dotnet.lua  premake5.lua
Strype-ScriptCore/Source/Strype/Core/: Application.cs  Asset.cs  AssetHandle.cs  InternalCalls.cs  Log.cs
Strype-ScriptCore/Source/Strype/Math/: Mathf.cs  Matrix4.cs  Noise.cs  Quaternion.cs  Transform.cs
Strype-ScriptCore/Source/Strype/Room/: Components.cs  Object.cs  Room.cs
Strype/master/: QuadShader.glsl
Strype/master/shaders/: QuadShader.glsl  TextShader.glsl
Strype/src/: Strype.h  Strype.hpp  stb_image.cpp  stypch.cpp  stypch.h  stypch.hpp
Strype/src/API/GLFW/: GlfwInput.cpp  GlfwWindow.cpp  GlfwWindow.h
Strype/src/API/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h  ImGuiLayer.hpp
Strype/src/API/OpenAL/: OpenALAudio.cpp  OpenALSound.cpp  OpenALSound.h  OpenALSource.cpp  OpenALSource.h
Strype/src/API/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRenderAPI.cpp  OpenGLRenderAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp
Strype/src/API/Windows/: WindowsPlatformUtils.cpp
Strype/src/Strype/: Strype.h
Strype/src/Strype/Asset/: Asset.cpp  Asset.h  Asset.hpp  AssetImporter.cpp  AssetImporter.h  AssetManager.cpp  AssetManager.h  AssetManager.hpp  AssetSerializer.cpp  AssetSerializer.h  AssetSerializer.hpp  PrefabImporter.cpp  PrefabImporter.h  RoomImporter.cpp  RoomImporter.h  SpriteSerializer.h  TextureImporter.cpp  TextureImporter.h  TextureSerializer.h
Strype/src/Strype/Audio/: Audio.cpp  Audio.h  Audio.hpp  AudioFile.cpp  AudioFileSerializer.h  AudioSource.cpp  Source.cpp
Strype/src/Strype/Core/: Application.cpp  Application.h  Application.hpp  Assert.h  Audio.cpp  Audio.h  AudioFile.cpp  AudioFile.hpp  Base.h  Base.hpp  Buffer.h  Buffer.hpp  EntryPoint.h  Event.hpp  Hash.h  Hash.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  Input.cpp  Input.h  Input.hpp  InputCodes.hpp  KeyCodes.h  KeyCodes.hpp  Layer.cpp  Layer.h  Layer.hpp  LayerStack.cpp  LayerStack.h  LayerStack.hpp  Log.cpp  Log.h  Log.hpp  MouseCodes.h  PlatformDetection.h  PlatformUtils.h  Project.cpp  Project.h  Session.hpp  Sound.cpp  (+9 more)
Strype/src/Strype/Events/: ApplicationEvent.h  ApplicationEvent.hpp  Event.h  Event.hpp  KeyEvent.h  KeyEvent.hpp  MouseEvent.h  MouseEvent.hpp
Strype/src/Strype/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Strype/src/Strype/Project/: Asset.hpp  AssetImporters.hpp  AssetManager.cpp  AssetManager.hpp  AssetSerializer.cpp  AssetSerializer.hpp  Project.cpp  Project.h  Project.hpp  ProjectSerializer.cpp  ProjectSerializer.h  ProjectSerializer.hpp
Strype/src/Strype/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Camera.hpp  CameraController.cpp  CameraController.h  Font.cpp  Font.h  Font.hpp  Framebuffer.h  RenderAPI.cpp  RenderAPI.h  RenderCommands.cpp  RenderFactory.cpp  RenderPipeline.cpp  RenderPipeline.h  RenderPipeline.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Sprite.hpp  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Strype/src/Strype/Room/: Components.h  Components.hpp  Object.cpp  Object.h  Object.hpp  ObjectSerializer.cpp  Prefab.h  Prefab.hpp  PrefabSerializer.cpp  PrefabSerializer.h  PrefabSerializer.hpp  Room.cpp  Room.h  Room.hpp  RoomInstance.hpp  RoomSerializer.cpp  RoomSerializer.h  RoomSerializer.hpp  Tilemap.hpp
Strype/src/Strype/Script/: ScriptAsset.hpp  ScriptEngine.cpp  ScriptEngine.h  ScriptEngine.hpp  ScriptGlue.cpp  ScriptGlue.h  ScriptGlue.hpp
Strype/src/Strype/Utils/: ImguiUtils.hpp  LinuxPlatformUtils.cpp  LoggingHelpers.hpp  PlatformUtils.h  PlatformUtils.hpp  ScopedDockspace.hpp  TypeInfo.hpp  TypeMap.h  TypeMap.hpp  WindowsPlatformUtils.cpp  YamlHelpers.h  YamlHelpers.hpp
scripts/: Clean.bat  Clean.py  Setup.py  build.bat
